# particle_sim

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  benchmarks_generator.py  distr_output.txt  output.txt  particle_sim.json  particle_sim_device.json  particle_sim_fast.json  particle_sim_queue.json  plot.py  plot_rdf.eps  plot_rdf.gpl  tmp.py
cmake/: CompilerWarnings.cmake
include/: cell_view.h  conf.h  curand_gen.h  domain_decomposition.h  exceptions.h  export_to_lammps.h  kd_tree.h  particle.h  particle_box.h  patch.h  pdb_export.h  safe_queue.h  spatial_hash.h  thread_pool.h  time_calculation.h  vec.h  vector.h
scripts/: benchmarks_generator.py  benchmarks_generator_device.py  benchmarks_generator_test_energy.py  plot.py  plot_rdf.gpl  plot_rdfs.gpl
src/: cell_view.cu  example.cu  export_to_lammps.cu  main.c  main.cu  main_device.cu  main_queue.cu  muvt.cu  particle.cu  particle_box.cu  pdb_export.cu
